# isort_pre_commit_test_issue_1702

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml
