[tool.poetry]
name = "isort_pre_commit_test_issue_1702"
version = "0.1.0"
description = ""
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
